# 123vendido-intelligence

./: Makefile  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .env.example  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_foundation.py
backend/app/: main.py
backend/app/application/queries/: base.py
backend/app/application/repositories/: base.py
backend/app/application/specifications/: base.py
backend/app/application/unit_of_work/: base.py
backend/app/core/: config.py  security.py
backend/app/domain/: __init__.py  models.py
backend/app/domain/ai/: contracts.py
backend/app/domain/assets/: contracts.py
backend/app/domain/common/: entities.py
backend/app/domain/connectors/: contracts.py
backend/app/domain/context_builder/: contracts.py
backend/app/domain/data_lake/: contracts.py
backend/app/domain/decision/: contracts.py
backend/app/domain/feature_flags/: contracts.py
backend/app/domain/finance/: contracts.py
backend/app/domain/gateway/: contracts.py
backend/app/domain/history/: contracts.py
backend/app/domain/intelligence/: contracts.py  pipelines.py
backend/app/domain/knowledge/: contracts.py
backend/client-sdk-typescript/: package.json
backend/client-sdk-typescript/src/: index.ts
backend/scripts/: audit_architecture.py  generate_openapi.py  generate_sdk.py
backend/tests/: test_api.py  test_architecture_contracts.py  test_certification_contracts.py  test_final_consolidation.py
docker/: README.md
(+63 files in other folders)
