[project]
name = "123vendido-backend"
version = "0.1.0"
description = "Enterprise backend foundation for 123Vendido intelligence platform"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.34", "sqlalchemy[asyncio]>=2.0", "asyncpg>=0.30",
  "alembic>=1.14", "pydantic>=2.10", "pydantic-settings>=2.7", "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7", "redis>=5.2", "loguru>=0.7", "prometheus-client>=0.21",
  "opentelemetry-api>=1.29", "python-multipart>=0.0.20", "email-validator>=2.2"
]
[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.25", "pytest-cov>=6.0", "httpx>=0.28", "ruff>=0.9"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
[tool.ruff]
line-length = 100
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
